Added new branch

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -6,7 +6,7 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Fork-io</title>
-    <link href="<%=require('../../../assets/normalize.css').default%>" rel="stylesheet">
+    <link href="<%=require('/assets/normalize.css').default%>" rel="stylesheet">
 </head>
 <body>
 <header class="header">
@@ -14,10 +14,11 @@
         <div class="inner">
             <div class="logo-container">
                 <a href="#">
-                    <img alt="fork-io-logo" class="adaptive-img" src="<%=require('../../../assets/logo.svg').default%>">
+                    <img alt="fork-io-logo" class="adaptive-img" src="<%=require('/assets/logo.svg').default%>">
                 </a>
             </div>
             <div class="links-container">
+                <a href="/test/index.html">text</a>
                 <nav class="nav">
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#">Overview</a></li>
